--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-title: "Your Blog Title"
-description: "A brief description of your blog."
+title: "A Blog Title"
+description: "A log of random projects."
 theme: jekyll-theme-cayman # or any supported GitHub Pages theme
