--- a/.github/workflows/publish-drafts.yml
+++ b/.github/workflows/publish-drafts.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   publish_drafts:
     runs-on: ubuntu-latest
+    env:
+      TZ: Australia/Sydney
 
     steps:
     - name: Check out repository
