--- a/.github/workflows/publish-drafts.yml
+++ b/.github/workflows/publish-drafts.yml
@@ -3,7 +3,7 @@ name: Publish Drafts
 on:
   push:
     paths:
-      - "_drafts/**" # Trigger the workflow when drafts are modified
+      - "_drafts/**"
 
 jobs:
   publish_drafts:
@@ -18,25 +18,50 @@ jobs:
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: '3.0' # Set to your Ruby version
+        ruby-version: '3.0'
+
+    - name: Check for published drafts
+      id: check_published
+      run: |
+        if grep -rl "published: true" _drafts/*.md; then
+          echo "found=true" >> $GITHUB_ENV
+        else
+          echo "found=false" >> $GITHUB_ENV
+        fi
+
+    - name: Skip if no drafts to publish
+      if: env.found == 'false'
+      run: echo "No drafts marked for publishing. Skipping."
 
     - name: Find drafts to publish
+      if: env.found == 'true'
       run: |
-        mkdir -p _posts
+        today=$(date +"%Y-%m-%d")
         for file in _drafts/*.md; do
           if grep -q "published: true" "$file"; then
-            # Extract date for the new filename
-            today=$(date +%Y-%m-%d)
             filename=$(basename "$file")
-            mv "$file" "_posts/${today}-${filename}"
-            echo "Moved $file to _posts/${today}-${filename}"
+            mv "$file" "_posts/${today}-${filename}" && echo "Moved $file to _posts/${today}-${filename}"
           fi
         done
 
-    - name: Commit and push published posts
+    - name: Commit changes to a new branch
+      if: env.found == 'true'
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git checkout -b auto-publish-drafts
         git add _posts/*.md
-        git commit -m "Auto-publish drafts"
-        git push
+        git commit -m "Auto-publish drafts on $(date +'%Y-%m-%d')"
+        git push -u origin auto-publish-drafts
+
+    - name: Create a pull request
+      if: env.found == 'true'
+      uses: peter-evans/create-pull-request@v4
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        branch: auto-publish-drafts
+        base: main
+        title: "Publish Drafts"
+        body: "This PR contains drafts marked as ready to publish."
