--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 title: "A Blog Title"
 description: "A log of random projects."
-theme: minima
+# theme: minima
+remote_theme: jekyll/minima
 
 minima:
   skin: dark
@@ -14,3 +15,7 @@ include:
 
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
+
+minima:
+  skin: auto
